# GYGame

./: README.md
GameCommon/: GYGame.workspace  GameCommon.sln
GameCommon/GameCommon/: GameCommon.vcproj  GameCommon.vcxproj  GameCommon.vcxproj.filters
GameCommon/GameLogicCommon/: GameLogicCommon.vcproj  GameLogicCommon.vcxproj  GameLogicCommon.vcxproj.filters
GameCommon/NetWork/: NetWork.cbp  NetWork.depend  NetWork.layout  NetWork.vcproj  NetWork.vcxproj
GameCommon/Table/: Table.vcproj  Table.vcxproj
GameCommon/Thread/: Thread.vcproj  Thread.vcxproj
GameCommon/test/: test.cbp  test.depend  test.layout  test.vcproj  test.vcxproj
Gateway/: Gateway.sln  Gateway.workspace
Gateway/Gateway/: Gateway.cbp  Gateway.depend  Gateway.vcproj  Gateway.vcxproj  Gateway.vcxproj.filters
Log/: Log.sln
Log/LogClient/: LogClient.vcproj  LogClient.vcxproj
Log/LogServer/: LogServer.vcproj  LogServer.vcxproj
Logic/: Logic.sln
Logic/Logic/: Logic.vcproj  Logic.vcxproj  Logic.vcxproj.filters
MeshNavigate/: BaseStruct.cpp  BaseStruct.h  ConcavePolygonDecompose.cpp  ConcavePolygonDecompose.h  ConcavePolygondecompose.cpp  ConvexPolygon.cpp  ConvexPolygon.h  Heap.cpp  Heap.h  MeshNavigate.cpp  MeshNavigate.h  ObjectMesh.cpp  ObjectMesh.h  PathFinder.cpp  PathFinder.h  Polygon.cpp  Polygon.h  PolygonClipping.cpp  PolygonClipping.h  VectorMath.cpp  VectorMath.h
MeshNavigate/test/: test.sln
MeshNavigate/test/test/: ReadMe.txt  resource.h  test.aps  test.cpp  test.rc  test.vcproj  testDlg.cpp  testDlg.h
Protocol/: Build.bat  Protocol.sln
Protocol/Protocol/: Protocol.vcproj  Protocol.vcxproj
Src/: CMakeLists.txt  CMakeListsGenerator.py  ReadMe  updatemakefile  updatemakefile.bat
Src/GameCommon/CommonDefine/: CMakeLists.txt  CMakeListsTemplate  GYArray.h  GYCommonDefine.cpp  GYCommonDefine.h  GYCycleBuffer.h  GYHashTable.h  GYINIReader.cpp  GYINIReader.h  GYList.h  GYMath.h  GYMisc.h  GYObject.h  GYSerialization.h  GYTimeStamp.h
Src/GameCommon/CommonDefine/String/: GYString.cpp  GYString.h  GYStringManger.cpp  GYStringManger.h
Src/GameCommon/CommonDefine/TimeController/: GYTimeController.cpp  GYTimeController.h
Src/GameCommon/GameLogicCommon/: CMakeLists.txt  CMakeListsTemplate  GYObjectCommenDefine.h  GYPosition.h  GYRect.h
Src/GameCommon/GameLogicCommon/GameTableDefine/: GYGameTableDefine.cpp  GYGameTableDefine.h
Src/GameCommon/GameLogicCommon/Scene/: GYArea.cpp  GYArea.h  GYScene.cpp  GYScene.h  GYZone.cpp  GYZone.h
Src/GameCommon/NetWork/: CMakeLists.txt  CMakeListsTemplate  GYBufferStreamSock.h  GYBufferStreamSocket.h  GYEpoll.cpp  GYEpoll.h  GYEvent.h  GYNetAddress.cpp  GYNetAddress.h  GYNetWorkCommonDefine.cpp  GYNetWorkCommonDefine.h  GYNetWorkErrorCode.h  GYReactor.cpp  GYReactor.h  GYSocket.cpp  GYSocket.h  GYStreamSerialization.h  GYWin32Select.cpp  GYWin32Select.h
Src/GameCommon/String/: GYString.cpp  GYStringManger.cpp  GYStringManger.h
Src/GameCommon/Table/: CMakeLists.txt  CMakeListsTemplate  GYTable.cpp  GYTable.h  GYTableSerialization.cpp  GYTableSerialization.h  ReadMe
Src/GameCommon/Thread/: CMakeLists.txt  CMakeListsGenerator.py  CMakeListsTemplate  GYCondition.cpp  GYCondition.h  GYFastMutex.cpp  GYFastMutex.h  GYGuard.h  GYMutex.cpp  GYMutex.h  GYThread.cpp  GYThread.h  GYThreadCommon.cpp  GYThreadCommon.h  GYThreadPool.cpp  GYThreadPool.h  GYThreadTask.h
Src/GameCommon/test/: CMakeLists.txt  CMakeListsTemplate  test.cpp
Src/GameLogicCommon/: GYObjectCommenDefine.h
Src/GameLogicCommon/GameTableDefine/: GYGameTableDefine.h
Src/GameLogicCommon/Scene/: GYArea.cpp  GYArea.h  GYScene.cpp  GYScene.h  GYZone.cpp  GYZone.h
Src/Gateway/: CMakeLists.txt  CMakeListsGenerator.py  CMakeListsTemplate  GYServer.cpp  GYServer.h  main.cpp
Src/Gateway/GatewayThread/: GYClientProcessData.cpp  GYClientSession.cpp  GYClientSession.h  GYGatewayThread.cpp  GYGatewayThread.h
Src/Gateway/ListenThread/: GYListenThread.cpp  GYListenThread.h
Src/Gateway/Packet/: GYPacketFactoryManager.cpp  GYPacketFactoryManager.h  GYPacketFactoryRegister.cpp
Src/Gateway/PacketHandler/: GYLoginPacketHandler.cpp  GYPacketHandler.h  GYPacketHandlerCommon.h  GYSCTestPacketHandler.cpp  GYTestPacketHandler.cpp
Src/Gateway/Test/: test.cpp  test.h
Src/Log/: README
Src/Log/LogClient/: GYLogManager.cpp  GYLogManager.h
Src/Log/LogServer/: main.cpp
Src/Logic/: CMakeLists.txt  CMakeListsTemplate  GYServer.cpp  GYServer.h  main.cpp
Src/Logic/NetWork/: GYGatewaySession.cpp  GYGatewaySession.h  GYNetWorkManager.cpp  GYNetWorkManager.h
Src/Logic/Object/: GYGameCreature.cpp  GYGameCreature.h  GYGameHuman.cpp  GYGameHuman.h  GYGameObject.h
Src/Logic/ObjectPool/: GYObjectPool.h
Src/Logic/Packet/: GYPacketFactoryManager.cpp  GYPacketFactoryManager.h  GYPacketFactoryRegister.cpp
Src/Logic/PacketHandler/: GYLoginPacketHandler.cpp  GYLogoutPacketHandler.cpp  GYPacketHandler.h  GYPacketHandlerCommon.h  GYTestPacketHandler.cpp
Src/Logic/Scene/: GYArea.cpp  GYArea.h  GYScene.cpp  GYScene.h  GYZone.cpp  GYZone.h
Src/Logic/Table/: GYTableDefine.cpp  GYTableDefine.h  GYTableManager.cpp  GYTableManager.h
Src/Protocol/: CMakeLists.txt  CMakeListsTemplate  GYLogin.cpp  GYLogin.h  GYLogout.cpp  GYLogout.h  GYProtocolDefine.cpp  GYProtocolDefine.h  GYProtocolID.h  GYSCTest.cpp  GYSCTest.h  GYTestPacket.cpp  GYTestPacket.h  ReadMe
Src/Protocol/ProtocolTool/: 11  PacketCppTemplate  PacketGenerator.py  PacketHeadTemplate  fileAnalysis.py  packet.py
