PROJECT(Gateway CXX)
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Debug")
endif()
SET(CMAKE_CXX_COMPILER "g++")
INCLUDE_DIRECTORIES(../GameCommon/CommonDefine)
INCLUDE_DIRECTORIES(../GameCommon/CommonDefine/TimeController)
INCLUDE_DIRECTORIES(../GameCommon/CommonDefine/String)
INCLUDE_DIRECTORIES(../GameCommon/NetWork)
INCLUDE_DIRECTORIES(../GameCommon/Thread)
INCLUDE_DIRECTORIES(../Protocol)
INCLUDE_DIRECTORIES(./GatewayThread)
INCLUDE_DIRECTORIES(./PacketHandler)
INCLUDE_DIRECTORIES(./Packet)
INCLUDE_DIRECTORIES(./)
MESSAGE(STATUS ${PROJECT_BINARY_DIR})
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/../Protocol/Lib ${PROJECT_BINARY_DIR}/../NetWork/Lib ${PROJECT_BINARY_DIR}/../Thread/Lib ${PROJECT_BINARY_DIR}/../GameCommon/Lib)
SET(PACKETHANDLER ./PacketHandler/GYLoginPacketHandler.cpp ./PacketHandler/GYSCTestPacketHandler.cpp ./PacketHandler/GYTestPacketHandler.cpp)
SET(GATEWAYTHREAD ./GatewayThread/GYClientProcessData.cpp ./GatewayThread/GYClientSession.cpp ./GatewayThread/GYGatewayThread.cpp)
SET(CMAKEFILES )
SET(SOURCE_DEFULT ./GYServer.cpp ./main.cpp)
SET(PACKET ./Packet/GYPacketFactoryManager.cpp ./Packet/GYPacketFactoryRegister.cpp)

ADD_EXECUTABLE(Gateway ${PACKETHANDLER} ${GATEWAYTHREAD} ${CMAKEFILES} ${SOURCE_DEFULT} ${PACKET} )
TARGET_LINK_LIBRARIES(Gateway NetWork pthread Thread GameCommon Protocol)
ADD_DEFINITIONS(-D_DEBUG)
IF(WIN32)
ADD_DEFINITIONS(-DWIN32)
ELSEIF(UNIX)
ADD_DEFINITIONS(-DLINUX64 -Wall -std=gnu++11)
ENDIF(WIN32)
