PROJECT(Logic CXX)
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Debug")
endif()
SET(CMAKE_CXX_COMPILER "g++")
INCLUDE_DIRECTORIES(../GameCommon/CommonDefine)
INCLUDE_DIRECTORIES(../GameCommon/CommonDefine/TimeController)
INCLUDE_DIRECTORIES(../GameCommon/CommonDefine/String)
INCLUDE_DIRECTORIES(../GameCommon/NetWork)
INCLUDE_DIRECTORIES(../GameCommon/Table)
INCLUDE_DIRECTORIES(../Protocol)
INCLUDE_DIRECTORIES(./NetWork)
INCLUDE_DIRECTORIES(./PacketHandler)
INCLUDE_DIRECTORIES(./Packet)
INCLUDE_DIRECTORIES(./Table)
INCLUDE_DIRECTORIES(./)
MESSAGE(STATUS ${PROJECT_BINARY_DIR})
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/../Table/Lib ${PROJECT_BINARY_DIR}/../Protocol/Lib ${PROJECT_BINARY_DIR}/../NetWork/Lib ${PROJECT_BINARY_DIR}/../Thread/Lib ${PROJECT_BINARY_DIR}/../GameCommon/Lib)
SET(tableFiles ./Table/GYTableDefine.cpp ./Table/GYTableManager.cpp)
SET(networkFiles ./NetWork/GYGatewaySession.cpp ./NetWork/GYNetWorkManager.cpp)
SET(packetFiles ./Packet/GYPacketFactoryManager.cpp ./Packet/GYPacketFactoryRegister.cpp)
SET(packetHandlerFiles ./PacketHandler/GYTestPacketHandler.cpp)
ADD_EXECUTABLE(Logic main.cpp GYServer.cpp ${tableFiles} ${networkFiles} ${packetFiles} ${packetHandlerFiles})
TARGET_LINK_LIBRARIES(Logic NetWork GameCommon Protocol Table)
IF(WIN32)
ADD_DEFINITIONS(-DWIN32)
ELSEIF(UNIX)
ADD_DEFINITIONS(-DLINUX64 -Wall)
ENDIF(WIN32)
