PROJECT(Logic CXX)
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Debug")
endif()
SET(CMAKE_CXX_COMPILER "g++")
INCLUDE_DIRECTORIES(../GameCommon/CommonDefine)
INCLUDE_DIRECTORIES(../GameCommon/CommonDefine/TimeController)
INCLUDE_DIRECTORIES(../GameCommon/CommonDefine/String)
INCLUDE_DIRECTORIES(../GameCommon/NetWork)
INCLUDE_DIRECTORIES(../GameCommon/Table)
INCLUDE_DIRECTORIES(../Protocol)
INCLUDE_DIRECTORIES(./NetWork)
INCLUDE_DIRECTORIES(./PacketHandler)
INCLUDE_DIRECTORIES(./Packet)
INCLUDE_DIRECTORIES(./Table)
INCLUDE_DIRECTORIES(./)
MESSAGE(STATUS ${PROJECT_BINARY_DIR})
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/../Table/Lib ${PROJECT_BINARY_DIR}/../Protocol/Lib ${PROJECT_BINARY_DIR}/../NetWork/Lib ${PROJECT_BINARY_DIR}/../Thread/Lib ${PROJECT_BINARY_DIR}/../GameCommon/Lib)
SET(SOURCE_DEFULT ./main.cpp ./GYServer.cpp)
SET(PACKETHANDLER ./PacketHandler/GYTestPacketHandler.cpp)
SET(NETWORK ./NetWork/GYGatewaySession.cpp ./NetWork/GYNetWorkManager.cpp)
SET(PACKET ./Packet/GYPacketFactoryManager.cpp ./Packet/GYPacketFactoryRegister.cpp)
SET(TABLE ./Table/GYTableDefine.cpp ./Table/GYTableManager.cpp)

ADD_EXECUTABLE(Logic ${SOURCE_DEFULT} ${PACKETHANDLER} ${NETWORK} ${PACKET} ${TABLE} )
TARGET_LINK_LIBRARIES(Logic NetWork GameCommon Protocol Table)
ADD_DEFINITIONS(-D_DEBUG)
IF(WIN32)
ADD_DEFINITIONS(-DWIN32)
ELSEIF(UNIX)
ADD_DEFINITIONS(-DLINUX64 -Wall)
ENDIF(WIN32)
