PROJECT(Logic CXX)
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Debug")
endif()
SET(CMAKE_CXX_COMPILER "g++")
INCLUDE_DIRECTORIES(../GameCommon/CommonDefine)
INCLUDE_DIRECTORIES(../GameCommon/CommonDefine/TimeController)
INCLUDE_DIRECTORIES(../GameCommon/CommonDefine/String)
INCLUDE_DIRECTORIES(../GameCommon/NetWork)
INCLUDE_DIRECTORIES(../GameCommon/Table)
INCLUDE_DIRECTORIES(../GameCommon/GameLogicCommon/GameTableDefine)
INCLUDE_DIRECTORIES(../GameCommon/GameLogicCommon)
INCLUDE_DIRECTORIES(../Protocol)
INCLUDE_DIRECTORIES(./NetWork)
INCLUDE_DIRECTORIES(./PacketHandler)
INCLUDE_DIRECTORIES(./Packet)
INCLUDE_DIRECTORIES(./Scene)
INCLUDE_DIRECTORIES(./Table)
INCLUDE_DIRECTORIES(./ObjectPool)
INCLUDE_DIRECTORIES(./Object)
INCLUDE_DIRECTORIES(./)
MESSAGE(STATUS ${PROJECT_BINARY_DIR})
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/../Table/Lib ${PROJECT_BINARY_DIR}/../Protocol/Lib ${PROJECT_BINARY_DIR}/../NetWork/Lib ${PROJECT_BINARY_DIR}/../Thread/Lib ${PROJECT_BINARY_DIR}/../GameCommon/Lib ${PROJECT_BINARY_DIR}/../GameLogicCommon/Lib)
SET(NETWORK ./NetWork/GYNetWorkManager.cpp ./NetWork/GYGatewaySession.cpp)
SET(OBJECT ./Object/GYGameHuman.cpp)
SET(SCENE ./Scene/GYZone.cpp ./Scene/GYScene.cpp ./Scene/GYArea.cpp)
SET(PACKET ./Packet/GYPacketFactoryManager.cpp ./Packet/GYPacketFactoryRegister.cpp)
SET(SOURCE_DEFULT ./GYServer.cpp ./main.cpp)
SET(PACKETHANDLER ./PacketHandler/GYLoginPacketHandler.cpp ./PacketHandler/GYTestPacketHandler.cpp ./PacketHandler/GYLogoutPacketHandler.cpp)
SET(OBJECTPOOL )
SET(TABLE ./Table/GYTableManager.cpp)

ADD_EXECUTABLE(Logic ${NETWORK} ${OBJECT} ${SCENE} ${PACKET} ${SOURCE_DEFULT} ${PACKETHANDLER} ${OBJECTPOOL} ${TABLE} )
TARGET_LINK_LIBRARIES(Logic NetWork GameCommon  GameLogicCommon Protocol Table)
ADD_DEFINITIONS(-D_DEBUG)
IF(WIN32)
ADD_DEFINITIONS(-DWIN32)
ELSEIF(UNIX)
ADD_DEFINITIONS(-DLINUX64 -Wall -std=c++0x)
ENDIF(WIN32)
