PROJECT(Protocol CXX)
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Debug")
endif()

SET(CMAKE_CXX_COMPILER "g++")


INCLUDE_DIRECTORIES(../GameCommon/CommonDefine)
INCLUDE_DIRECTORIES(../GameCommon/CommonDefine/String)
INCLUDE_DIRECTORIES(../GameCommon/CommonDefine/TimeController)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/Lib)
SET(LIB_SRC GYSCTest.cpp GYTestPacket.cpp GYProtocolDefine.cpp)
ADD_LIBRARY(Protocol ${LIB_SRC})
TARGET_LINK_LIBRARIES(Protocol GameCommon)
MESSAGE(STATUS ${CMAKE_SYSTEM})
IF(WIN32)
ADD_DEFINITIONS(-DWIN32)
ELSEIF(UNIX)
ADD_DEFINITIONS(-DLINUX64 -Wall)
ENDIF(WIN32)

