PROJECT(GameCommon CXX)
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Debug")
endif()

SET(CMAKE_CXX_COMPILER "g++")

#ADD_SUBDIRECTORY(./ ./Test)
INCLUDE_DIRECTORIES(../CommonDefine ../String)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/Lib)
SET(LIB_SRC ../String/GYString.cpp ../String/GYStringManger.cpp)
ADD_LIBRARY(GameCommon ${LIB_SRC})
MESSAGE(STATUS ${CMAKE_SYSTEM})
IF(WIN32)
ADD_DEFINITIONS(-DWIN32)
ELSEIF(UNIX)
ADD_DEFINITIONS(-DLINUX64 -Wall)
ENDIF(WIN32)

