PROJECT(GameLogicCommon CXX)
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Debug")
endif()

SET(CMAKE_CXX_COMPILER "g++")

#ADD_SUBDIRECTORY(./ ./Test)
INCLUDE_DIRECTORIES(../CommonDefine)
INCLUDE_DIRECTORIES(../CommonDefine/String)
INCLUDE_DIRECTORIES(../CommonDefine/TimeController)
INCLUDE_DIRECTORIES(../Table)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/Lib)
SET(GAMETABLEDEFINE ./GameTableDefine/GYGameTableDefine.cpp)
SET(SOURCE_DEFULT )

ADD_LIBRARY(GameLogicCommon ${GAMETABLEDEFINE} ${SOURCE_DEFULT} )
MESSAGE(STATUS ${CMAKE_SYSTEM})
ADD_DEFINITIONS(-D_DEBUG)
IF(WIN32)
ADD_DEFINITIONS(-DWIN32)
ELSEIF(UNIX)
ADD_DEFINITIONS(-DLINUX64 -Wall -std=c++0x)
ENDIF(WIN32)
