PROJECT(Thread CXX)
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Debug")
endif()

SET(CMAKE_CXX_COMPILER "g++")

#ADD_SUBDIRECTORY(./ ./Test)
INCLUDE_DIRECTORIES(../CommonDefine)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/Lib)
SET(LIB_SRC GYCondition.cpp GYFastMutex.cpp GYMutex.cpp GYThread.cpp GYThreadCommon.cpp GYThreadPool.cpp)
ADD_LIBRARY(Thread ${LIB_SRC})
MESSAGE(STATUS ${CMAKE_SYSTEM})
IF(WIN32)
ADD_DEFINITIONS(-DWIN32)
ELSEIF(UNIX)
ADD_DEFINITIONS(-Wall)
ADD_DEFINITIONS(-DLINUX64)
ADD_DEFINITIONS(-lpthread)
ENDIF(WIN32)

