PROJECT(Thread CXX)
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Debug")
endif()

#ADD_SUBDIRECTORY(./ ./Test)
INCLUDE_DIRECTORIES(../CommonDefine ../CommonDefine/String ../CommonDefine/TimeController)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/Lib)
SET(SOURCE_DEFULT ./GYCondition.cpp ./GYFastMutex.cpp ./GYMutex.cpp ./GYThread.cpp ./GYThreadCommon.cpp ./GYThreadPool.cpp)

ADD_LIBRARY(Thread ${SOURCE_DEFULT} )
TARGET_LINK_LIBRARIES(Thread pthread)
ADD_DEFINITIONS(-D_DEBUG)
MESSAGE(STATUS ${CMAKE_SYSTEM})
IF(WIN32)
ADD_DEFINITIONS(-DWIN32)
ELSEIF(UNIX)
ADD_DEFINITIONS(-DLINUX64 -Wall  -std=gnu++11)
ENDIF(WIN32)

