PROJECT(NetWorkTest CXX)
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Debug")
endif()
SET(CMAKE_CXX_COMPILER "g++")
INCLUDE_DIRECTORIES(../CommonDefine)
INCLUDE_DIRECTORIES(../CommonDefine/String)
INCLUDE_DIRECTORIES(../CommonDefine/TimeController)
INCLUDE_DIRECTORIES(../NetWork)
INCLUDE_DIRECTORIES(../Thread)
MESSAGE(STATUS ${PROJECT_BINARY_DIR})
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/../NetWork/Lib ${PROJECT_BINARY_DIR}/../Thread/Lib)
ADD_EXECUTABLE(NetWorkTest test.cpp)
TARGET_LINK_LIBRARIES(NetWorkTest NetWork pthread Thread)
IF(WIN32)
ADD_DEFINITIONS(-DWIN32)
ELSEIF(UNIX)
ADD_DEFINITIONS(-DLINUX64 -Wall)
ENDIF(WIN32)
