PROJECT(test CXX)
if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Debug")
endif()
SET(CMAKE_CXX_COMPILER "g++")
INCLUDE_DIRECTORIES(../CommonDefine)
INCLUDE_DIRECTORIES(../CommonDefine/String)
INCLUDE_DIRECTORIES(../CommonDefine/TimeController)
INCLUDE_DIRECTORIES(../NetWork)
INCLUDE_DIRECTORIES(../../Protocol)
INCLUDE_DIRECTORIES(../Table)
INCLUDE_DIRECTORIES(../Thread)
MESSAGE(STATUS ${PROJECT_BINARY_DIR})
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/../GameCommon/Lib ${PROJECT_BINARY_DIR}/../Table/Lib ${PROJECT_BINARY_DIR}/../Protocol/Lib ${PROJECT_BINARY_DIR}/../NetWork/Lib ${PROJECT_BINARY_DIR}/../Thread/Lib)
SET(SOURCE_DEFULT ./test.cpp)

ADD_EXECUTABLE(test ${SOURCE_DEFULT} )
TARGET_LINK_LIBRARIES(test Protocol Table NetWork pthread Thread GameCommon)
ADD_DEFINITIONS(-D_DEBUG)
IF(WIN32)
ADD_DEFINITIONS(-DWIN32)
ELSEIF(UNIX)
ADD_DEFINITIONS(-DLINUX64 -Wall)
ENDIF(WIN32)
